--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
   <title>みんなで富士吉田ポータル！</title>
 </head>
 <body>
-  
-  hello fujiyoshida
+  <div class="header">
+    <img src="img/header.png" alt="">
+  </div>
+
+  <div class="intro">
+    <p>
+      このサイトは、<br>
+      富士吉田市のみんなが<br>
+      コードを書いて更新されます。
+    </p>
+  </div>
 
 </body>
 </html>
