--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- for iOS -->
+  <meta name="apple-mobile-web-app-title" content="富士吉田">
+  <link rel="apple-touch-icon" href="img/icons/icon-152x152.png">
+  <!-- for Android -->
+  <!-- <link rel="manifest" href="manifest.json"> -->
+
   <title>みんなで富士吉田ポータル！</title>
 </head>
 <body>
-  <div class="header">
-    <img src="img/header.png" alt="">
-  </div>
+  <div class="content">
+    <div class="header">
+      <img src="img/header.png" alt="">
+    </div>
 
-  <div class="intro">
-    <p>
-      このサイトは、<br>
-      富士吉田市のみんなが<br>
-      コードを書いて更新されます。
-    </p>
+    <div class="intro">
+      <p>
+        このサイトは、<br>
+        富士吉田市のみんなが<br>
+        コードを書いて更新されます。
+      </p>
+    </div>
   </div>
-
 </body>
 </html>
