--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         コードを書いて更新されます。
       </p>
     </div>
+    
+    <h2 class="headline_sub">Pages</h2>
+    <div class="pages">
+      <a href="">
+        <div class="page">
+          <img src="thumbnail/1.png" class="thumbnail">
+          <div class="title">開発してるよ</div>
+        </div>
+      </a>
+    </div>
   </div>
 </body>
 </html>
