--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     
     <h2 class="headline_sub">Pages</h2>
     <div class="pages">
-      <a href="">
+      <a href="pages/RihoTakenaka/index.html">
         <div class="page">
           <img src="thumbnail/1.png" class="thumbnail">
-          <div class="title">開発してるよ</div>
+          <div class="title">みんなからのおすすめ情報！</div>
         </div>
       </a>
     </div>
