目次に追加

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
           <div class="title">みんなからのおすすめ情報！</div>
         </div>
       </a>
+      <a href="pages/Haruka/index.html">
+        <div class="page">
+          <img src="pages/Haruka/hata20.png" class="thumbnail">
+          <div class="title">ハタオリ工場見学できます！</div>
+        </div>
+      </a>
     </div>
   </div>
 </body>
