サムネイルと画像変更

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="pages">
       <a href="">
         <div class="page">
-          <img src="thumbnail/1.png" class="thumbnail">
-          <div class="title">開発してるよ</div>
+          <img src="thumbnail/2.png" class="thumbnail">
+          <div class="title">富士吉田の皆さんにぜひ開催して頂きたいイベント！</div>
         </div>
       </a>
     </div>
