かほのページを追加

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
           <div class="title">ハタオリ工場見学できます！</div>
         </div>
       </a>
+      <a href="pages/FujiyoshiKaho/torii.html">
+        <div class="page">
+          <img src="pages/FujiyoshiKaho/IMG_1098.JPG" class="thumbnail">
+          <div class="title">鳥居がありました</div>
+        </div>
+      </a>
     </div>
   </div>
 </body>
