--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="intro">
       <p>
-        このサイトは、<br>
+        このサイトは<br>
         富士吉田市のみんなが<br>
         コードを書いて更新されます。
       </p>
