--- a/pages/Haruka/index.html
+++ b/pages/Haruka/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>機織り工場見学</title>
+    <title>Fabrick Weaving</title> 
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico">
   </head>
@@ -9,41 +9,43 @@
   <body>
     <header>
       <div class="containaer">
-    <h1><img src="hata20.png" width="300" height="200" algin="left" alt="はたおり"><img>（株）○○源商店<br />３月２１日、ハタオリ工場見学できます！<img></h1>
+    <h1><img src="hata20.png" width="300" height="200" algin="left" alt="はたおり"><img>○○ cooperate<br /> You can come to see around factory of fabric weaving! <img></h1>
      </div>
       <link rel="stylesheet" href="css/style.css"> 
 
-    <p> 今日3/21（土）は月に１回の富士吉田のハタオリ工場直営店が営業する貴重な日です！
+    <p> 21st March Today is monthly event when facotry of fabric weaving is open up !<br />
       <a href="http://hatajirushi.jp/all/news/7948" target="_brank">HATAORIMACHI NO HATAJIRUSHI</a>
     </p></header>
 
     <!--memo-->
-    <h2>１．日時</h2>
+    <h2>1.Date</h2>
     <p>
       <div>
         <ul>
-          <li>3/21（土） </li>
-          <li>11：00～17：00</li>
+          <li>21st March (Staurday) </li> 
+          <li>AM 11：00～ PM 5：00</li>
         </ul>
       </div>
     </p>
-    <h2>２．場所</h2>
-      <p>（株）○○商店<br />
-        <a href="https://www.google.co.jp/maps/place/%EF%BC%88%E6%A0%AA%EF%BC%89%E5%89%8D%E7%94%B0%E6%BA%90%E5%95%86%E5%BA%97/@35.490759,138.8049738,17z/data=!3m1!4b1!4m5!3m4!1s0x60196730e18831d1:0xca153f6800ca5ed4!8m2!3d35.4907547!4d138.8071625?hl=ja" target="_brank">〒403-0004 山梨県富士吉田市下吉田２丁目２５−２４</a>
+    <h2>2.Place</h2>
+      <p> ○○ cooperate<br />
+        <a href="https://www.google.co.jp/maps/place/%EF%BC%88%E6%A0%AA%EF%BC%89%E5%89%8D%E7%94%B0%E6%BA%90%E5%95%86%E5%BA%97/@35.490759,138.8049738,17z/data=!3m1!4b1!4m5!3m4!1s0x60196730e18831d1:0xca153f6800ca5ed4!8m2!3d35.4907547!4d138.8071625?hl=ja" target="_brank">〒403-0004 2-25-24 Shimoyoshida Hujiyoshida city Yamanashi</a>
       </p>
 
-    <h2>３．PRポイント</h2>
-    <p>職人が一つ一つ折る様子を間近で見ることができます！<br />
-      予約不要なので是非気軽にお越しください！
+    <h2>3.PR Point</h2>
+    <p>It is good experience to see the maister is weaving the fabric at the front of your eye !<br />
+      Anyone is weclomed as no booking is required. 
     </p>
 
-    <h3>★お店情報</h3>
+    <h3>★Shop information</h3>
 
     <div class="info">
-      <p class="tel"><span>電話:</span> 012-3456-7890</p>
-      <p class="open">受付時間: 平日 AM 10:00 〜 PM 5:00</p>
+      <p class="tel"><span>TEL:</span> +81 12-3456-7890</p>
+      <p class="open">Open at: weekday AM 10:00 〜 PM 5:00</p>
     </div>
     
 
   </body>
+
+  
 </html>
