add line bot qr

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         </div>
       </a>
     </div>
+
+    <h2 class="headline_sub">LINEアカウント友達登録</h2>
+    <div class="line_qr_image">
+      <img src="img/linebot_qr.png">
+    </div>
+
   </div>
 </body>
 </html>
