--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           <div class="title">鳥居がありました</div>
         </div>
       </a>
+      <a href="pages/Haruka2/index.html">
+        <div class="page">
+          <img src="back_忠霊塔.png" class="thumbnail">
+          <div class="title">富士吉田BESTスポット</div>
+        </div>
+      </a>
     </div>
 
     <h2 class="headline_sub">LINEアカウント友達登録</h2>
