--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </a>
       <a href="pages/Haruka2/index.html">
         <div class="page">
-          <img src="pages/FujiyoshiKaho/IMG_1098.JPG" class="thumbnail">
+          <img src="pages/Haruka2/back_忠霊塔.png" class="thumbnail">
           <div class="title">富士吉田BESTスポット</div>
         </div>
       </a>
