--- a/pages/Haruka2/index.html
+++ b/pages/Haruka2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ページタイトル</title> 
+    <title>BESTスポット</title> 
     <meta charset="utf-8" />
     <style>
       body {
