haruka3 サイト追加

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
           <div class="title">富士吉田BESTスポット</div>
         </div>
       </a>
+      <a href="pages/Haruka3/index.html">
+        <div class="page">
+          <img src="pages/Haruka3/images/menber.jpg" class="thumbnail">
+          <div class="title">富士吉田の地域課題を解決！</div>
+        </div>
+      </a>
     </div>
 
     <h2 class="headline_sub">LINEアカウント友達登録</h2>
